--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "chance": "^1.0.4",
     "webpack": "^1.13.2"
   },
   "dependencies": {
