--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "flux": "^3.0.0",
+    "moment": "^2.15.1",
     "react": "^15.4.0-rc.4",
-    "react-dom": "^15.4.0-rc.4",
-    "react-flux": "^1.0.1"
+    "react-dom": "^15.4.0-rc.4"
   }
 }
