--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "flux": "^3.0.0",
+    "lodash": "^4.16.4",
     "moment": "^2.15.1",
     "react": "^15.4.0-rc.4",
     "react-dom": "^15.4.0-rc.4"
